objects/QuoteLineItem/fields/ELV_Include_in_Day_1_ARR__c.field-meta.xml
<CustomField>
    <fullName>ELV_Include_in_Day_1_ARR__c</fullName>
    <description>TNCI-206 / ELV-DM-010. Converted from writable Checkbox to Formula Checkbox. TRUE when the line is active on the quote Day 1 ARR start date: non-renewal lines must start exactly on that date, renewal lines need only span it. Summary Items are excluded so the flag can gate Day 1 ARR aggregation without double counting. Reads ELV_Day_1_ARR_Start_Date__c, itself a cross-object formula to the Quote cascade.</description>
    <formula>AND( NOT( ISPICKVAL( Ruby__LineType__c, &quot;SummaryItem&quot; ) ),
     OR( AND( NOT( CONTAINS( TEXT( Ruby__ChangeType__c ), &quot;Renew&quot; ) ),
              Ruby__SubscriptionStartDate__c = ELV_Day_1_ARR_Start_Date__c ),
         AND( Ruby__SubscriptionStartDate__c &lt;= ELV_Day_1_ARR_Start_Date__c,
              ELV_End_Date__c &gt;= ELV_Day_1_ARR_Start_Date__c ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked when this line contributes to Day 1 ARR. Summary Items are always unchecked.</inlineHelpText>
    <label>Include in Day 1 ARR</label>
    <type>Checkbox</type>
</CustomField>