objects/QuoteLineItem/fields/ELV_Include_in_Exit_ARR__c.field-meta.xml
<CustomField>
    <fullName>ELV_Include_in_Exit_ARR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Exit ARR</label>
    <type>Checkbox</type>
</CustomField>