objects/QuoteLineItem/fields/ELV_Included_Products__c.field-meta.xml
<CustomField>
    <fullName>ELV_Included_Products__c</fullName>
    <formula>Product2.Bundle_Component__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Included Products</label>
    <type>Text</type>
</CustomField>