objects/QuoteLineItem/fields/ELV_IncludeInSeatsPurchased__c.field-meta.xml
<CustomField>
    <fullName>ELV_IncludeInSeatsPurchased__c</fullName>
    <formula>IF(

    ISBLANK(Product2.Ruby__OriginalProduct__c),

    Product2.IncludeInSeatsPurchased__c,

    Product2.Ruby__OriginalProduct__r.IncludeInSeatsPurchased__c

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Include in Seats Purchased</label>
    <type>Checkbox</type>
</CustomField>