objects/QuoteLineItem/fields/ELV_Is_Cloned_Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>ELV_Is_Cloned_Quote_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Cloned Quote Line</label>
    <type>Checkbox</type>
</CustomField>