objects/QuoteLineItem/fields/ELV_Is_ESR_Product__c.field-meta.xml
<CustomField>
    <fullName>ELV_Is_ESR_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is ESR Product</label>
    <type>Checkbox</type>
</CustomField>