objects/QuoteLineItem/fields/ELV_Is_Renewal_Transaction__c.field-meta.xml
<CustomField>
    <fullName>ELV_Is_Renewal_Transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TNCI-139 / ELV-CPQ-036. Stored line-local renewal predicate. TRUE when Ruby__ChangeType__c contains Renew. Maintained before insert/update for native Quote roll-up filtering.</description>
    <inlineHelpText>System-maintained renewal indicator.</inlineHelpText>
    <label>Is Renewal Transaction</label>
    <type>Checkbox</type>
</CustomField>