objects/QuoteLineItem/fields/ELV_L1_L2_Support_Discount__c.field-meta.xml
<CustomField>
    <fullName>ELV_L1_L2_Support_Discount__c</fullName>
    <label>L1/L2 Support Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>