objects/QuoteLineItem/fields/ELV_Latest_End_Date__c.field-meta.xml
<CustomField>
    <fullName>ELV_Latest_End_Date__c</fullName>
    <label>Latest End Date</label>
    <type>Date</type>
</CustomField>