objects/QuoteLineItem/fields/ELV_ListPriceTemplate__c.field-meta.xml
<CustomField>
    <fullName>ELV_ListPriceTemplate__c</fullName>
    <formula>Ruby__ListPrice__c * ELV_ProrateMultiplier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Price Template</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>