objects/QuoteLineItem/fields/ELV_Marketplace_ARR_Impact_Percent__c.field-meta.xml
<CustomField>
    <fullName>ELV_Marketplace_ARR_Impact_Percent__c</fullName>
    <formula>Quote.ELV_Marketplace_ARR_Impact_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketplace ARR Impact (Percent)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>