objects/QuoteLineItem/fields/ELV_Max_Bundle_Quantity__c.field-meta.xml
<CustomField>
    <fullName>ELV_Max_Bundle_Quantity__c</fullName>
    <formula>Quote.ELV_Max_Bundle_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Bundle Quantity</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>