objects/QuoteLineItem/fields/ELV_NetSuite_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ELV_NetSuite_Start_Date__c</fullName>
    <label>NetSuite Start Date</label>
    <type>Date</type>
</CustomField>