objects/QuoteLineItem/fields/ELV_NonDiscountable__c.field-meta.xml
<CustomField>
    <fullName>ELV_NonDiscountable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks the quote line as non-discountable. Used by product rule #17 to block partner discretionary discounts on non-discountable products.</description>
    <inlineHelpText>If checked, this product cannot receive a partner discretionary discount.</inlineHelpText>
    <label>Non-Discountable</label>
    <type>Checkbox</type>
</CustomField>