objects/QuoteLineItem/fields/ELV_OEM_Applied_Minimum_Fee__c.field-meta.xml
<CustomField>
    <fullName>ELV_OEM_Applied_Minimum_Fee__c</fullName>
    <description>Minimum-fee amount calculated for this Legacy Quote Line before comparison with the royalty amount. TNCI-208. Stored for calculation traceability.</description>
    <label>OEM Applied Minimum Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>