objects/QuoteLineItem/fields/ELV_OEM_Applied_Royalty_Percent__c.field-meta.xml
<CustomField>
    <fullName>ELV_OEM_Applied_Royalty_Percent__c</fullName>
    <description>Royalty percentage selected from ELV_OEM_Fee_Rule__mdt for the calculated OEM fee. TNCI-208. Stored for calculation traceability.</description>
    <label>OEM Applied Royalty Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>