objects/QuoteLineItem/fields/ELV_OEM_Fee__c.field-meta.xml
<CustomField>
    <fullName>ELV_OEM_Fee__c</fullName>
    <description>Calculated OEM fee for this Legacy Quote Line. TNCI-208. Written by the OEM fee calculation service as the greater of royalty fee and applicable minimum fee; cleared when the line is ineligible.</description>
    <label>OEM Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>