objects/QuoteLineItem/fields/ELV_OEM_Fee_Rule__c.field-meta.xml
<CustomField>
    <fullName>ELV_OEM_Fee_Rule__c</fullName>
    <description>DeveloperName of the ELV_OEM_Fee_Rule__mdt record applied to this Legacy Quote Line. TNCI-208. Stored for calculation traceability.</description>
    <label>OEM Fee Rule</label>
    <length>80</length>
    <type>Text</type>
</CustomField>