objects/QuoteLineItem/fields/ELV_Operative_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>ELV_Operative_Sales_Price__c</fullName>
    <label>Operative Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>