objects/QuoteLineItem/fields/ELV_Opportunity_Registration_Discount__c.field-meta.xml
<CustomField>
    <fullName>ELV_Opportunity_Registration_Discount__c</fullName>
    <label>DEPRECATED - Opp Reg Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>