objects/QuoteLineItem/fields/ELV_OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>ELV_OpportunityId__c</fullName>
    <formula>CASESAFEID(Quote.OpportunityId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OpportunityId</label>
    <type>Text</type>
</CustomField>