objects/QuoteLineItem/fields/ELV_OptionLevel__c.field-meta.xml
<CustomField>
    <fullName>ELV_OptionLevel__c</fullName>
    <description>Indicates nest level of this option (only applies to lines that are generated from options).</description>
    <label>Option Level</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>