objects/QuoteLineItem/fields/ELV_Override_Core_Qty_Assignment__c.field-meta.xml
<CustomField>
    <fullName>ELV_Override_Core_Qty_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Core Qty Assignment</label>
    <type>Checkbox</type>
</CustomField>