objects/QuoteLineItem/fields/ELV_Override_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ELV_Override_Start_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Start Date</label>
    <type>Checkbox</type>
</CustomField>