objects/QuoteLineItem/fields/ELV_PackageTotal__c.field-meta.xml
<CustomField>
    <fullName>ELV_PackageTotal__c</fullName>
    <description>Total price of this package including its components.</description>
    <formula>ELV_ComponentTotal__c + Ruby__TotalPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Package Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>