objects/QuoteLineItem/fields/ELV_Partner_Discount_Difference__c.field-meta.xml
<CustomField>
    <fullName>ELV_Partner_Discount_Difference__c</fullName>
    <label>Partner Discount Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>