objects/QuoteLineItem/fields/ELV_Partner_Discount_Doc__c.field-meta.xml
<CustomField>
    <fullName>ELV_Partner_Discount_Doc__c</fullName>
    <formula>ELV_PartnerDiscount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Discount Doc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>