objects/QuoteLineItem/fields/ELV_Partner_Discount_Override__c.field-meta.xml
<CustomField>
    <fullName>ELV_Partner_Discount_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Discount Override</label>
    <type>Checkbox</type>
</CustomField>