objects/QuoteLineItem/fields/ELV_Partner_Discretionary_Discount__c.field-meta.xml
<CustomField>
    <fullName>ELV_Partner_Discretionary_Discount__c</fullName>
    <label>Partner Discretionary Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>