objects/QuoteLineItem/fields/ELV_Partner_Referral_Fee_Percent__c.field-meta.xml
<CustomField>
    <fullName>ELV_Partner_Referral_Fee_Percent__c</fullName>
    <formula>IF(ELV_Exclude_from_ARR__c, 0, Quote.ELV_Partner_Referral_Fee_Percent__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Referral Fee (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>