objects/QuoteLineItem/fields/ELV_PartnerDiscount__c.field-meta.xml
<CustomField>
    <fullName>ELV_PartnerDiscount__c</fullName>
    <label>Partner Discount (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>