objects/QuoteLineItem/fields/ELV_PartnerDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>ELV_PartnerDiscountAmount__c</fullName>
    <label>Partner Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>