objects/QuoteLineItem/fields/ELV_PartnerPrice__c.field-meta.xml
<CustomField>
    <fullName>ELV_PartnerPrice__c</fullName>
    <label>Partner Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>