objects/QuoteLineItem/fields/ELV_Percent_of_Total_Software__c.field-meta.xml
<CustomField>
    <fullName>ELV_Percent_of_Total_Software__c</fullName>
    <label>Percent of Total Software</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>