objects/QuoteLineItem/fields/ELV_Percent_to_Decimal__c.field-meta.xml
<CustomField>
    <fullName>ELV_Percent_to_Decimal__c</fullName>
    <formula>1-( Ruby__PartnerPayoutPercentage__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent to Decimal</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>