objects/QuoteLineItem/fields/ELV_Priced_with_Rounding_Turned_Off__c.field-meta.xml
<CustomField>
    <fullName>ELV_Priced_with_Rounding_Turned_Off__c</fullName>
    <formula>IF(LEN(TEXT(ABS(Ruby__NetSalesPrice__c - (FLOOR(Ruby__NetSalesPrice__c))))) &gt; 3, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priced with Rounding Turned Off</label>
    <type>Checkbox</type>
</CustomField>