objects/QuoteLineItem/fields/ELV_Pricing_Refresh_Required__c.field-meta.xml
<CustomField>
    <fullName>ELV_Pricing_Refresh_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set when partner or distributor discount enrichment changes after the Line Editor has loaded. The Line Editor clears the displayed indicator on its next pricing calculation.</description>
    <inlineHelpText>Selected when partner or distributor discounts were retrieved after the Line Editor loaded. Refresh pricing to apply them.</inlineHelpText>
    <label>Refresh Required</label>
    <type>Checkbox</type>
</CustomField>