objects/QuoteLineItem/fields/ELV_Prod_Max_End_Date__c.field-meta.xml
<CustomField>
    <fullName>ELV_Prod_Max_End_Date__c</fullName>
    <label>Prod Max End Date</label>
    <type>Date</type>
</CustomField>