objects/QuoteLineItem/fields/ELV_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>ELV_Product_Code__c</fullName>
    <label>Product Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>