objects/QuoteLineItem/fields/ELV_Product_Exclude_from_ARR__c.field-meta.xml
<CustomField>
    <fullName>ELV_Product_Exclude_from_ARR__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Stored copy of Exclude from ARR on the product, so ARR formulas stay line-local and can be rolled up to the quote.</inlineHelpText>
    <label>Product Exclude from ARR</label>
    <type>Checkbox</type>
</CustomField>