objects/QuoteLineItem/fields/ELV_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>ELV_Product_Group__c</fullName>
    <label>Partner Discount Product Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>