objects/QuoteLineItem/fields/ELV_Product_Group_Formula__c.field-meta.xml
<CustomField>
    <fullName>ELV_Product_Group_Formula__c</fullName>
    <description>Used in approvalsPro</description>
    <formula>IF(
ISBLANK(Product2.Ruby__OriginalProduct__c),
TEXT(Product2.Product_Group__c),
TEXT(Product2.Ruby__OriginalProduct__r.Product_Group__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Group Formula</label>
    <type>Text</type>
</CustomField>