objects/QuoteLineItem/fields/ELV_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>ELV_Product_Line__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Appliance</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Authoring</fullName>
            </value>
            <value>
                <fullName>Connect</fullName>
            </value>
            <value>
                <fullName>Trends</fullName>
            </value>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
            <value>
                <fullName>Trace</fullName>
            </value>
            <value>
                <fullName>Patch</fullName>
            </value>
            <value>
                <fullName>IOC Detect</fullName>
            </value>
            <value>
                <fullName>Comply</fullName>
            </value>
            <value>
                <fullName>Protect</fullName>
            </value>
            <value>
                <fullName>FIM</fullName>
            </value>
            <value>
                <fullName>Security Suite</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>ELA</fullName>
            </value>
            <value>
                <fullName>Premium Support</fullName>
            </value>
            <value>
                <fullName>Interact</fullName>
            </value>
            <value>
                <fullName>Core-LTD</fullName>
            </value>
            <value>
                <fullName>Core-UPG</fullName>
            </value>
            <value>
                <fullName>IR</fullName>
            </value>
            <value>
                <fullName>CM</fullName>
            </value>
            <value>
                <fullName>IC</fullName>
            </value>
            <value>
                <fullName>IOC Funnel</fullName>
            </value>
            <value>
                <fullName>Server</fullName>
            </value>
            <value>
                <fullName>VMWare</fullName>
            </value>
            <value>
                <fullName>Tanium Threat Response</fullName>
            </value>
            <value>
                <fullName>Converge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>