objects/QuoteLineItem/fields/ELV_Product_Name_Display_Template__c.field-meta.xml
<CustomField>
    <fullName>ELV_Product_Name_Display_Template__c</fullName>
    <formula>IF( ISBLANK(TEXT( ELV_ESR_Service_Type__c )) ,  Ruby__ProductName__c , Ruby__ProductName__c  &amp; BR() &amp; &apos; &apos; &amp; Text( ELV_ESR_Service_Type__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name Display Template</label>
    <type>Text</type>
</CustomField>