objects/QuoteLineItem/fields/ELV_Product_Promotion__c.field-meta.xml
<CustomField>
    <fullName>ELV_Product_Promotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Promotion</label>
    <referenceTo>Product_Promotion__c</referenceTo>
    <relationshipLabel>Quote Line Items (Product Promotion)</relationshipLabel>
    <relationshipName>ELV_Product_Promotion_QL</relationshipName>
    <type>Lookup</type>
</CustomField>