objects/QuoteLineItem/fields/ELV_Product_Promotion_Name__c.field-meta.xml
<CustomField>
    <fullName>ELV_Product_Promotion_Name__c</fullName>
    <formula>ELV_Product_Promotion__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Promotion Name</label>
    <type>Text</type>
</CustomField>