objects/QuoteLineItem/fields/ELV_Product_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>ELV_Product_Type_Formula__c</fullName>
    <description>Used in Approvals Pro variable for approval criteria on quote submission</description>
    <formula>IF(

    ISBLANK(Product2.Ruby__OriginalProduct__c),

    TEXT(Product2.Product_Type__c),

    TEXT(Product2.Ruby__OriginalProduct__r.Product_Type__c)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Type Formula</label>
    <type>Text</type>
</CustomField>