objects/QuoteLineItem/fields/ELV_ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>ELV_ProductFamily__c</fullName>
    <formula>TEXT(Product2.Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>