objects/QuoteLineItem/fields/ELV_Promo_Discount_Validation__c.field-meta.xml
<CustomField>
    <fullName>ELV_Promo_Discount_Validation__c</fullName>
    <formula>IF( AND( !ISNULL( ELV_Product_Promotion__c ), ELV_Product_Promotion__r.Discount__c &lt;&gt; Discount, Discount &gt; 0), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promo Discount Validation</label>
    <type>Checkbox</type>
</CustomField>