objects/QuoteLineItem/fields/ELV_Promotion__c.field-meta.xml
<CustomField>
    <fullName>ELV_Promotion__c</fullName>
    <label>Promo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Burst</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>FOC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>