objects/QuoteLineItem/fields/ELV_Quantity_Template__c.field-meta.xml
<CustomField>
    <fullName>ELV_Quantity_Template__c</fullName>
    <formula>Ruby__ActualQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Template</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>