objects/QuoteLineItem/fields/ELV_Quota_Retirement_ARR__c.field-meta.xml
<CustomField>
    <fullName>ELV_Quota_Retirement_ARR__c</fullName>
    <formula>IF(NOT(ELV_Quota_Retirement_Eligible__c), 0, IF(NOT(ELV_Start_Date_in_Opp_Fiscal_Year__c), 0, IF(AND(NOT(ELV_Exclude_from_ARR__c), ELV_ProrateMultiplier__c &gt;= 1), ELV_ARR_Amount__c, IF(AND(NOT(ELV_Exclude_from_ARR__c), ELV_ProrateMultiplier__c &lt; 1), Ruby__TotalPrice__c, 0 ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quota Retirement ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>