objects/QuoteLineItem/fields/ELV_Quota_Retirement_ARR_EDW__c.field-meta.xml
<CustomField>
    <fullName>ELV_Quota_Retirement_ARR_EDW__c</fullName>
    <label>Quota Retirement ARR (EDW)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>