objects/QuoteLineItem/fields/ELV_Quota_Retirement_Eligible__c.field-meta.xml
<CustomField>
    <fullName>ELV_Quota_Retirement_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quota Retirement Eligible</label>
    <type>Checkbox</type>
</CustomField>