objects/QuoteLineItem/fields/ELV_QuoteLineItem_Migrated_Record__c.field-meta.xml
<CustomField>
    <fullName>ELV_QuoteLineItem_Migrated_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ELV QuoteLineItem Migrated Record</label>
    <type>Checkbox</type>
</CustomField>