objects/QuoteLineItem/fields/ELV_RARR__c.field-meta.xml
<CustomField>
    <fullName>ELV_RARR__c</fullName>
    <label>RARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>