objects/QuoteLineItem/fields/ELV_Refresh_Derived_Values__c.field-meta.xml
<CustomField>
    <fullName>ELV_Refresh_Derived_Values__c</fullName>
    <defaultValue>false</defaultValue>
    <description>System-managed one-time request to recompute deterministic, system-owned quote line values.</description>
    <label>Refresh Derived Values</label>
    <type>Checkbox</type>
</CustomField>