objects/QuoteLineItem/fields/ELV_Renewal_Uplift_Override__c.field-meta.xml
<CustomField>
    <fullName>ELV_Renewal_Uplift_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, preserves the user-entered native Renewal Uplift Percent on this Quote Line Item during automated uplift recalculation.</description>
    <label>Renewal Uplift Override</label>
    <type>Checkbox</type>
</CustomField>