objects/QuoteLineItem/fields/ELV_RenewalUpliftPercent__c.field-meta.xml
<CustomField>
    <fullName>ELV_RenewalUpliftPercent__c</fullName>
    <description>TNCI-135 custom applied renewal uplift rate. Replaces the TNCI-135 write to Ruby__RenewalUpliftPercent__c.</description>
    <label>Renewal Uplift Percent</label>
    <precision>12</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>