objects/QuoteLineItem/fields/ELV_Required_for_Provision_Gov_Cloud__c.field-meta.xml
<CustomField>
    <fullName>ELV_Required_for_Provision_Gov_Cloud__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required for Provision Gov Cloud</label>
    <type>Checkbox</type>
</CustomField>