objects/QuoteLineItem/fields/ELV_Required_for_Provision_Subscription__c.field-meta.xml
<CustomField>
    <fullName>ELV_Required_for_Provision_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required for Provision Subscription</label>
    <type>Checkbox</type>
</CustomField>