objects/QuoteLineItem/fields/ELV_Restricted_SKU__c.field-meta.xml
<CustomField>
    <fullName>ELV_Restricted_SKU__c</fullName>
    <formula>Product2.Restricted_SKU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Restricted SKU</label>
    <type>Checkbox</type>
</CustomField>