objects/QuoteLineItem/fields/ELV_Revenue_Model__c.field-meta.xml
<CustomField>
    <fullName>ELV_Revenue_Model__c</fullName>
    <formula>TEXT(Product2.Ruby__PriceModel__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Model</label>
    <type>Text</type>
</CustomField>