objects/QuoteLineItem/fields/ELV_Seats_Purchased__c.field-meta.xml
<CustomField>
    <fullName>ELV_Seats_Purchased__c</fullName>
    <formula>Quote.ELV_No_of_End_Points_Quote_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seats Purchased</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>