objects/QuoteLineItem/fields/ELV_Show_on_Invoice__c.field-meta.xml
<CustomField>
    <fullName>ELV_Show_on_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show on Invoice</label>
    <type>Checkbox</type>
</CustomField>