objects/QuoteLineItem/fields/ELV_Show_Promo_Document__c.field-meta.xml
<CustomField>
    <fullName>ELV_Show_Promo_Document__c</fullName>
    <formula>IF(!ISBLANK( ELV_Promotion_Document2__c), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Promo Document</label>
    <type>Checkbox</type>
</CustomField>