objects/QuoteLineItem/fields/ELV_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>ELV_Sort_Order__c</fullName>
    <label>Sort</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>