objects/QuoteLineItem/fields/ELV_Standard_Partner_Discount__c.field-meta.xml
<CustomField>
    <fullName>ELV_Standard_Partner_Discount__c</fullName>
    <label>Standard Partner Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>