objects/QuoteLineItem/fields/ELV_Start_Date_Diff__c.field-meta.xml
<CustomField>
    <fullName>ELV_Start_Date_Diff__c</fullName>
    <formula>AND(NOT(ISBLANK(ELV_NetSuite_Start_Date__c)),( ELV_NetSuite_Start_Date__c &lt;&gt; Ruby__SubscriptionStartDate__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date Diff</label>
    <type>Checkbox</type>
</CustomField>